# xlsynth

./: .bazelrc  .gitignore  MODULE.bazel  WORKSPACE  make_local_release.py  make_local_release_test.py  mkdocs.yml  release_runtime_closure.py  release_runtime_closure_test.py
.github/workflows/: build-and-release-dylib.yml  build-rocky8.yml
dependency_support/: apple_support_no_uuid.patch  load_external.bzl  z3.patch
dependency_support/llvm/: llvm.patch  workspace.bzl
dependency_support/rules_hdl/: rules_hdl.patch  workspace.bzl
docs_src/: dev_passes_list.md  dslx_std.md
docs_src/design_docs/: dslx_sum_types.md
xls/build_rules/: BUILD  bundle_static_library.sh  bundle_static_library_test.sh  xls_cc_embed_data_rules.bzl  xls_estimator_rules.bzl  xls_ir_rules.bzl  xls_pass_rules.bzl  xls_static_library_bundle.bzl
xls/codegen/: BUILD  block_generator.cc  block_generator.h  block_stitching_pass_test.cc  codegen_options.h  codegen_residual.proto  (+14 more)
xls/public/: BUILD  c_api.cc  c_api.h  c_api_dslx.cc  c_api_dslx.h  c_api_impl_helpers.cc  c_api_impl_helpers.h  c_api_ir_analysis.cc  c_api_ir_analysis.h  c_api_ir_builder.cc  c_api_ir_builder.h  c_api_symbols.txt  c_api_test.cc  c_api_vast.cc  c_api_vast.h  c_api_vast_test.cc  exported_symbols.map  libxls_aot_runtime_link.toml  runtime_build_actions.cc  standalone_aot_runtime.cc  standalone_aot_runtime.h  standalone_aot_runtime_source.BUILD.bazel  standalone_aot_runtime_source.MODULE.bazel  standalone_aot_runtime_surface_test.cc  standalone_aot_runtime_test.cc  test_c_api_symbols.py  xls_public_macros.oss.bzl
(+664 files in other folders)
