load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "standalone_aot_runtime",
    srcs = ["xls/public/standalone_aot_runtime.cc"],
    hdrs = [
        "xls/jit/generated_code_callback_abi.h",
        "xls/public/standalone_aot_runtime.h",
    ],
    copts = ["-std=c++20"],
    includes = ["."],
)
